--- a/_teaching/2022-bios-385.md
+++ b/_teaching/2022-bios-385.md
@@ -3,7 +3,7 @@ title: "Teaching Assistant, Cellular and Molecular Neuroscience (BIOS 385) (F22)
 collection: teaching
 type: "Undergraduate & Graduate course"
 permalink: /teaching/2022-Cell-Molecular-Neuro
-venue: "University 1, Department"
+venue: "Rice University, Department of Biosciences"
 date: 2022-08-01
 location: "Rice University"
 ---
