--- a/_teaching/2022-bios-385.md
+++ b/_teaching/2022-bios-385.md
@@ -8,7 +8,7 @@ date: 2022-08-01
 location: "Rice University"
 ---
 
-This is a description of a teaching experience. You can use markdown like any other post.
+Teaching assistant under Dr. Cana Ross. Class of 60 students
 
 Heading 1
 ======
