--- a/_teaching/2022-bios-385.md
+++ b/_teaching/2022-bios-385.md
@@ -1,5 +1,5 @@
 ---
-title: "Teaching Assistant, Cellular and Molecular Neuroscience (BIOS 385) (F22)"
+title: "Teaching Assistant, Cellular and Molecular Neuroscience (BIOS 385/585) (F22)"
 collection: teaching
 type: "Undergraduate & Graduate course"
 permalink: /teaching/2022-Cell-Molecular-Neuro
@@ -8,13 +8,6 @@ date: 2022-08-01
 location: "Rice University"
 ---
 
-Teaching assistant under Dr. Cana Ross. Class of 60 students
+Teaching assistant under Dr. Cana Ross. Class of 60 upper-level undergraduates and graduate students.
+Cellular, molecular, and integrative mechanisms of neural function, including membrane and axon physiology, synaptic transmission and plasticity, sensory transduction and processing.
 
-Heading 1
-======
-
-Heading 2
-======
-
-Heading 3
-======
