fixed order of research projects

--- a/_teaching/2022-bios-385.md
+++ b/_teaching/2022-bios-385.md
@@ -9,5 +9,5 @@ location: "Rice University"
 ---
 
 Teaching assistant under Dr. Cana Ross. Class of 60 upper-level undergraduates and graduate students.
-Cellular, molecular, and integrative mechanisms of neural function, including membrane and axon physiology, synaptic transmission and plasticity, sensory transduction and processing.
+Topics include cellular, molecular, and integrative mechanisms of neural function, including membrane and axon physiology, synaptic transmission and plasticity, sensory transduction and processing.
 
